Change esc shortcut to jj

--- a/ideavim/.ideavimrc
+++ b/ideavim/.ideavimrc
@@ -97,7 +97,7 @@ let g:WhichKeyDesc_errors_prev = "<leader>ep Go to previous error in solution"
 "" Key mappings
 "" ========================================================
 
-inoremap jk <Esc>
+inoremap jj <Esc>
 
 " Tab navigation
 nnoremap <A-n> :tabnext<CR>
