Add dynamic Spotify to bar, only shows if spotify is running

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -47,6 +47,13 @@ markup=pango
 #interval=1800
 #color=#7275b3
 
+# Spotify icon \uF1BC
+[spotify]
+label=
+command=~/.config/i3/scripts/spotify.py
+color=#81b71a
+interval=5
+
 # Disk usage
 #
 # The directory defaults to $HOME if the instance is not specified.
