Clean up i3blocks config

--- a/i3/.config/i3/i3blocks.conf
+++ b/i3/.config/i3/i3blocks.conf
@@ -111,11 +111,12 @@ interval=30
 full_text=: :
 color=#717171
 
-[pavucontrol]
-full_text=
-command=pavucontrol
+#[pavucontrol]
+#full_text=
+#command=pavucontrol
 
 [volume-pulseaudio]
+label= 
 command=~/.config/i3/scripts/volume
 instance=Master
 interval=1
@@ -129,20 +130,33 @@ interval=1
 #command=~/.config/i3/scripts/keyboard-layout
 #interval=2
 
-[keybindings]
-full_text=
-command=~/.config/i3/scripts/keyhint
+#[keybindings]
+#full_text=
+#command=~/.config/i3/scripts/keyhint
 
 #set power-profile
-[ppd_menu]
-full_text=
-command=~/.config/i3/scripts/power-profiles
-color=#407437
+#[ppd_menu]
+#full_text=
+#command=~/.config/i3/scripts/power-profiles
+#color=#407437
+
+[simple-2]
+full_text=: :
+color=#717171
 
 #Show the current power-profile
 [ppd-status]
+label= 
 command=~/.config/i3/scripts/ppd-status
 interval=5
+
+[simple-2]
+full_text=/
+
+#Show the current graphics mode
+[optimus-manager]
+command=~/.config/i3/scripts/optimus-manager
+interval=30
 
 [time]
 #label=
@@ -154,5 +168,5 @@ full_text=
 command=~/.config/i3/scripts/powermenu
 
 [simple-2]
-full_text=: :
+full_text=  
 color=#717171
