--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -407,13 +407,14 @@ exec --no-startup-id dbus-launch dunst --config ~/.config/dunst/dunstrc
 # Autostart apps as you like
 #exec --no-startup-id sleep 2 && xfce4-terminal
 #exec --no-startup-id sleep 7 && firefox https://github.com/endeavouros-team/endeavouros-i3wm-setup/blob/main/force-knowledge.md
-#exec --no-startup-id sleep 3 && thunar
 
 ###############
 # system tray #
 ###############
 # if you do not use dex: exec --no-startup-id dex --autostart --environment i3
 # you need to have tray apps started manually one by one:
+
+exec --no-startup-id dropbox
 
 # start blueberry app for managing bluetooth devices from tray:
 #exec --no-startup-id blueberry-tray
