--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -232,7 +232,7 @@ set $ws10 "10"
 #workspace $ws5 output HDMI-0
 
 # bind program to workspace and focus to them on startup:
-assign [class="steam"] $ws1
+assign [class="Steam"] $ws1
 assign [class="lutris"] $ws1
 for_window [class="spotify"] $ws2
 assign [class="(?i)firefox"] $ws3
