--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -133,7 +133,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 # keybinding in fancy rofi (automated):
-bindsym F1 exec ~/.config/i3/scripts/keyhint-2
+# bindsym F1 exec ~/.config/i3/scripts/keyhint-2
 # alternative
 # keybinding list in editor:
 # bindsym $mod+F1 exec xed ~/.config/i3/keybindings
@@ -232,7 +232,7 @@ set $ws10 "10"
 #workspace $ws5 output HDMI-0
 
 # bind program to workspace and focus to them on startup:
-assign [class="Steam"] $ws1
+assign [class="steam"] $ws1
 assign [class="lutris"] $ws1
 for_window [class="spotify"] $ws2
 assign [class="(?i)firefox"] $ws3
