Remove some shortcuts that interfere with mac

--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -489,7 +489,7 @@ mouse_map shift+left click grabbed,ungrabbed mouse_handle_click selection link p
 
 #: Click the link under the mouse cursor
 
-mouse_map ctrl+shift+left release grabbed,ungrabbed mouse_handle_click link
+# mouse_map ctrl+shift+left release grabbed,ungrabbed mouse_handle_click link
 
 #::  Variant with Ctrl+Shift is present because the simple click based
 #::  version has an unavoidable delay of click_interval, to
@@ -497,7 +497,7 @@ mouse_map ctrl+shift+left release grabbed,ungrabbed mouse_handle_click link
 
 #: Discard press event for link click
 
-mouse_map ctrl+shift+left press grabbed discard_event
+# mouse_map ctrl+shift+left press grabbed discard_event
 
 #::  Prevent this press event from being sent to the program that has
 #::  grabbed the mouse, as the corresponding release event is used to
@@ -570,7 +570,7 @@ mouse_map shift+right press ungrabbed,grabbed mouse_selection extend
 
 #: Show clicked command output in pager
 
-mouse_map ctrl+shift+right press ungrabbed mouse_show_command_output
+# mouse_map ctrl+shift+right press ungrabbed mouse_show_command_output
 
 #::  Requires shell integration
 #::  <https://sw.kovidgoyal.net/kitty/shell-integration/> to work.
@@ -1556,7 +1556,7 @@ linux_display_server auto
 #: The full list of actions that can be mapped to key presses is
 #: available here <https://sw.kovidgoyal.net/kitty/actions/>.
 
-kitty_mod ctrl+shift
+# kitty_mod ctrl+shift
 
 #: Special modifier key alias for default shortcuts. You can change
 #: the value of this option to alter all default shortcuts that use
@@ -1872,13 +1872,13 @@ map kitty_mod+f8 swap_with_window
 
 #: Next tab
 
-map kitty_mod+right next_tab
+# map kitty_mod+right next_tab
 map shift+cmd+]     next_tab
 map ctrl+tab        next_tab
 
 #: Previous tab
 
-map kitty_mod+left previous_tab
+# map kitty_mod+left previous_tab
 map shift+cmd+[    previous_tab
 map ctrl+shift+tab previous_tab
 
@@ -2210,8 +2210,6 @@ map shift+cmd+/ open_url https://sw.kovidgoyal.net/kitty/
 #: }}}
 
 #: }}}
-
-
 
 # BEGIN_KITTY_THEME
 # Catppuccin-Mocha
